@@ -1,4 +1,9 @@
-﻿shmuel 16.06.2014 20:52:25 +0200 - build 373
+﻿shmuel 17.06.2014 16:14:51 +0200 - build 374
+
+1. LuaFAR: функция editor.InsertTextW теперь сама обеспечивает два нулевых байта в конце текста,
+   передаваемого Фару. Таким образом, вызывающая функция может об этом не заботиться.
+
+shmuel 16.06.2014 20:52:25 +0200 - build 373
 
 1. Уточнение 371.
 
